# LurkerOld

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
GamesUpdate/: CMakeLists.txt  CMakePresets.json  CURLing.h  Game.cpp  GamesUpdate.cpp  GamesUpdate.h  Logger.cpp  Lurker.cpp  MongoDB.cpp  MongoDB.h  NoTCMakeLists.txt
ProxyHolder/: CMakeLists.txt  CMakePresets.json  Logger.cpp  Logger.h  ProxyHolder.cpp  ProxyHolder.h
Tests/: CMakeLists.txt  Tests.cpp  appid.csv
includes/: CURLing.cpp  CURLing.h  Game.h  IP.cpp  IP.h  Logger.cpp  Logger.h  Lurker.cpp  Lurker.h  MongoDB.cpp
versions/: GamesUpdate_v1
